--- a/html/MPList.html
+++ b/html/MPList.html
@@ -7,7 +7,9 @@
     <title>MP List</title>
 </head>
 <body>
-    <h1>Hi</h1>
+    <main>
+        
+    </main>
     <script src="/js/MPList.js"></script>
 </body>
 </html>
